# UEDX80480050ESP32-5inch-Touch-Display

./: README.md  README_CN.md
2D drawings/: ALL-UE050WV-RB40-A116A.dwg  ALL-UE050WV-RB40-A198A.dwg  PLCM-UEDX804800450E-WB-B.dwg
examples/esp_idf/gui_guider_monitoring_5inch/: partitions.csv  sdkconfig.defaults
examples/esp_idf/gui_guider_monitoring_5inch/common/hw_init/input/: touch_init.c
examples/esp_idf/gui_guider_monitoring_5inch/common/hw_init/lcd/: lcd_init_qspi.c  lcd_init_rgb.c  lcd_init_spi_with_psram.c
examples/esp_idf/gui_guider_monitoring_5inch/main/: CMakeLists.txt  color_test.c  color_test.h  main.c
examples/esp_idf/lvgl_v9_demo_5inch/: sdkconfig  sdkconfig.defaults
examples/esp_idf/lvgl_v9_demo_5inch/common/hw_init/: hw_init.c  idf_component.yml
examples/esp_idf/lvgl_v9_demo_5inch/common/hw_init/helpers/: lcd_orientation_helper.c
examples/esp_idf/lvgl_v9_demo_5inch/common/hw_init/input/: knob_init.c
examples/esp_idf/lvgl_v9_demo_5inch/common/hw_init/lcd/: lcd_init_mipi_dsi.c  lcd_init_rgb.c
examples/esp_idf/lvgl_v9_demo_5inch/main/: CMakeLists.txt  main.c
examples/esp_idf/squareline_coffee_5inch/: sdkconfig  sdkconfig.old
examples/esp_idf/squareline_coffee_5inch/common/hw_init/: hw_init.h
examples/esp_idf/squareline_coffee_5inch/common/hw_init/helpers/: lcd_orientation_helper.h
examples/esp_idf/squareline_coffee_5inch/common/hw_init/input/: touch_rotation_helper.c  touch_rotation_helper.h
examples/esp_idf/squareline_coffee_5inch/common/hw_init/lcd/: lcd_init_rgb.c  lcd_init_spi_without_psram.c
examples/esp_idf/squareline_coffee_5inch/main/: CMakeLists.txt  app_features.h  idf_component.yml  main.c
examples/esp_idf/squareline_coffee_5inch/main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_themes.c
examples/esp_idf/squareline_coffee_5inch/main/ui/components/: ui_comp.h  ui_comp_button.c  (+10 more)
(+13 files in other folders)
